--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+#Oauth2
+spring.security.oauth2.client.registration.google.client-id= 511756036334-t0g6cunhdfmta3465ijv4mdal77nneda.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
+spring.security.oauth2.client.registration.google.scope= email, profile
